Overwrite existing comment

--- a/action.yml
+++ b/action.yml
@@ -77,11 +77,18 @@ runs:
         path: cypress/videos
         if-no-files-found: ignore
 
+    - uses: peter-evans/find-comment@v2
+      id: fc_update
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: cypress test
+
     - name: Create or update comment
       if: failure()
       uses: peter-evans/create-or-update-comment@v2
       with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
+        comment-id: ${{ steps.fc_update.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           cypress test failed :scream:
@@ -92,7 +99,7 @@ runs:
     - name: Create or update comment
       uses: peter-evans/create-or-update-comment@v2
       with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
+        comment-id: ${{ steps.fc_update.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           cypress test approved :sunglasses:
